--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 	<groupId>org.mongodb.datasource</groupId>
 	<artifactId>mongodb-jndi-datasource</artifactId>
 	<name>JNDI pooled datasource for MongoDB</name>
-	<version>4.0</version>
+	<version>5.0</version>
 	
 	<properties>
-		<mongo.client.version>3.0.0</mongo.client.version>
+		<mongo.client.version>3.2.2</mongo.client.version>
 	</properties>
 	
 	<dependencies>
@@ -16,6 +16,14 @@
 			<artifactId>mongodb-driver</artifactId>
 			<version>${mongo.client.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
